--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/perfume
+spring.datasource.url=jdbc:postgresql://localhost:5432/starbuckscup
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=1206
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
-spring.flyway.locations=classpath:db/migration
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2MB
@@ -13,9 +12,9 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.mail.host=smtp.gmail.com
 #type your email here
-spring.mail.username=webstore.perfume@gmail.com
+spring.mail.username=nlduytanhcm@gmail.com
 #type password email here
-spring.mail.password=Fcnhfk-rbtd
+spring.mail.password=Tan0899488142
 spring.mail.port=465
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.auth=true
