--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/starbuckscup
-spring.datasource.username=postgres
-spring.datasource.password=1206
-spring.jpa.generate-ddl=false
+spring.datasource.url=jdbc:postgresql://asset-management-03.postgres.database.azure.com:5432/postgres
+spring.datasource.username=assetmanagement@asset-management-03
+spring.datasource.password=Rookies03
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.jdbc.core=DEBUG
+spring.datasource.initialization-mode=always
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2MB
@@ -35,9 +37,9 @@ spring.security.oauth2.client.registration.github.client-id=95162f0ca4fbb8236c3d
 spring.security.oauth2.client.registration.github.client-secret=c80297b73b6710455005bd5cfd4427fe7034b9ed
 spring.security.oauth2.client.registration.github.scope=user:email,read:user
 
-amazon.aws.access-key=AKIATP4TDBGPCTXUIXD2
-amazon.aws.secret-key=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
-amazon.s3.bucket.name=perfumeswebstorage
+amazon.aws.access-key=AKIAWQY5J37PTPD3BADP
+amazon.aws.secret-key=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
+amazon.s3.bucket.name=duytan-perfumesweb
 
 recaptcha.secret=6Lc5cLkZAAAAANUjd4--Jx6PioSC_N-9MFKT3PsA
 recaptcha.url=https://www.google.com/recaptcha/api/siteverify?secret=%s&response=%s
